refactor Add setting for test.